kubernetes2.0.3/app/rabbitmq.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: rabbit
  namespace: app  
  labels: 
    app: rabbitmq 
spec: 
  selector: 
    matchLabels:
      app: rabbitmq 
  replicas: 1
  template: 
    metadata: 
      name: rabbitmq
      labels: 
        app: rabbitmq
        type: queue
    spec: 
      containers: 
        - name: rabbitmq-container
          image: ghostd/rabbitmq:1.0.0
          ports: 
            - containerPort: 15672
