kubernetes2.0.3/app/itemcounter_cluster_ip.yaml
apiVersion: v1
kind: Service 
metadata:  
  name: itemcounterservice
  namespace: app 
spec: 
  ports: 
    - targetPort: 9090
      port: 9090
  selector: 
    app: itemcounter
