kubernetes2.0.3/app/publisher_cluster_ip.yaml
apiVersion: v1
kind: Service 
metadata:  
  name: publisher
  namespace: app 
spec: 
  ports: 
    - targetPort: 9292
      port: 9292
  selector: 
    app: publisher
