kubernetes2.0.3/app/rabbitmq_cluster_ip.yaml
apiVersion: v1
kind: Service 
metadata: 
  name: rabbitmq 
  namespace: app 
spec: 
  type: ClusterIP
  ports: 
    - targetPort: 5672
      port: 5672
  selector: 
    app: rabbitmq
    type: queue
