kubernetes2.0.3/app/redis_cluster_ip.yaml
apiVersion: v1
kind: Service 
metadata: 
  name: redisservice 
  namespace: app 
spec: 
  type: ClusterIP
  ports: 
    - targetPort: 6379
      port: 6379
  selector: 
    app: redispod
