kubernetes2.0.3/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: app 
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #cert-manager.io/cluster-issuer: letsencrypt-staging
    #acme.cert-manager.io/http01-edit-in-place: "true"
    #kubernetes.io/ingress.global-static-ip-name: sampleApp-ip
spec:
  #tls: 
  #  - hosts: 
  #    - 34.134.108.229.nip.io 
  #    secretName: ingress-cert-secret
  rules:
   - http:
      paths:
      - path: /add
        pathType: Prefix
        backend:
          service:
            name: publisher 
            port:
              number: 9292
      - path: /get
        pathType: Prefix 
        backend: 
          service: 
            name: itemcounterservice
            port: 
              number: 9090
