kubernetes2.0.3/app/rabbit_network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: application-rabbit-policy
  namespace: app 
spec:
  podSelector:
    matchLabels:
      app: rabbitmq
      type: queue
  policyTypes:
    - Ingress
    - Egress 
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: publisher
        - namespaceSelector:
            matchLabels:
              name: app 
      ports:
        - protocol: TCP
          port: 5672
  egress:
    - to:
        - podSelector:
            matchLabels: 
              app: receiver
        - namespaceSelector:
            matchLabels:
              name: app 
      ports:
        - protocol: TCP
          port: 5672
